# IMS

./: .env  .example.env  .gitignore  CMakeLists.txt  CMakeUserPresets.example.json  CMakeUserPresets.json  drogonConfig.example.json  drogonConfig.json  main.cpp  vcpkg.json
src/: CMakeLists.txt
src/controllers/: AuthController.cpp  AuthController.hpp  CMakeLists.txt
src/controllers/api/: AuthController.cpp  CMakeLists.txt
src/database/: CMakeLists.txt  userRepo.cpp  userRepo.hpp
src/models/: CMakeLists.txt  User.hpp
src/services/: CMakeLists.txt  authService.cpp  authService.hpp
src/utils/: CMakeLists.txt
src/utils/env_loader/: CMakeLists.txt  EnvLoader.cpp  EnvLoader.hpp
src/utils/exceptions/: CMakeLists.txt  ErrorType.hpp  HandleBadRequest.hpp  HandleError.hpp  HttpResponseHelper.hpp  Result.hpp
